docs/api/qiskit/1.4/qiskit.providers.models.BackendStatus.mdx
---
title: BackendStatus (v1.4)
description: API reference for qiskit.providers.models.BackendStatus in qiskit v1.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.BackendStatus
---

# BackendStatus

<Class id="qiskit.providers.models.BackendStatus" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendstatus.py#L20-L104" signature="qiskit.providers.models.BackendStatus(backend_name, backend_version, operational, pending_jobs, status_msg)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.14)")

  Class representing Backend Status.

  Initialize a BackendStatus object

  <Admonition title="Deprecated since version 1.4" type="danger">
    The class `qiskit.providers.models.backendstatus.BackendStatus` is deprecated as of qiskit 1.4. It will be removed in the 2.0 release. The models in `qiskit.providers.models` and related objects are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires these representations it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The backend’s name
  *   **backend\_version** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The backend’s version of the form X.Y.Z
  *   **operational** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.14)")) – True if the backend is operational
  *   **pending\_jobs** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.14)")) – The number of pending jobs on the backend
  *   **status\_msg** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – The status msg for the backend

  **Raises**

  [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – If the backend version is in an invalid format

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.BackendStatus.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendstatus.py#L60-L72" signature="from_dict(data)" modifiers="classmethod">
    Create a new BackendStatus object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – A dictionary representing the BaseBakend to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.BackendStatus.to_dict "qiskit.providers.models.BackendStatus.to_dict").

    **Returns**

    The BackendStatus from the input dictionary.

    **Return type**

    [BackendStatus](#qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.BackendStatus.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendstatus.py#L74-L80" signature="to_dict()">
    Return a dictionary format representation of the BackendStatus.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")
  </Function>
</Class>

